# distributed-inference

./: .gitignore  Test.py  pyproject.toml
.devcontainer/: DevEnv.dockerfile  devcontainer-lock.json  devcontainer.json  post-create.sh
_model_management_try/: fake_test_agg_model_profile.py  fake_test_ideals_computation.py  fake_test_model_division.py  fake_test_simple_model_profile.py  models_info.py
assets/scripts/: README.md  export_bert.py  export_common.py  export_mobilenet.py  export_resnet.py  export_vit.py  export_yolo.py  requirements.txt  resnet-model-import.py
src/distributed_inference/adapters/inbound/model_manager/http/: router.py  schema.py
src/distributed_inference/adapters/outbound/model_artifact/materializer/: local_model_version_materializer.py  local_sub_model_materializer.py
src/distributed_inference/adapters/outbound/model_artifact/model_artifact_materializer/: local_model_version_materializer.py  local_sub_model_materializer.py
src/distributed_inference/adapters/outbound/model_artifact/store/: local_model_version_artifact_store.py  local_sub_model_artifact_store.py
src/distributed_inference/adapters/outbound/model_metadata_store/: in_memory.py
src/distributed_inference/adapters/outbound/model_optimize/: onnx_model_optimize.py
src/distributed_inference/application/model_manager/: default_model_manager.py
src/distributed_inference/application/model_manager/contracts/: model_manager.py
src/distributed_inference/application/model_metadata_store/contracts/: model_metadata_store.py
src/distributed_inference/application/model_metadata_store/domain/: model_metadata.py
src/distributed_inference/application/model_optimize/contracts/: model_optimizer.py
src/distributed_inference/application/model_profile/: default_model_profile.py  default_model_profiler.py
src/distributed_inference/application/model_profile/contracts/: model_graph_extractor.py  model_profile.py  model_profiler.py
src/distributed_inference/application/model_profile/optimization/: model_optimize.py
src/distributed_inference/application/model_profile/profiling/: model_profile.py  model_profile_agg.py  onnx_tool_custom_nodes.py
src/distributed_inference/application/model_profile/utils/: model_utils.py
src/distributed_inference/application/model_splitter/: default_model_splitter.py
src/distributed_inference/application/model_splitter/contracts/: model_splitter.py
src/distributed_inference/control_plane/coarsening/: graph_coarsening.py
src/distributed_inference/domain/: Flow.py  ModelGraph.py  ModelGraphInfo.py  analyzed_model.py  flow.py  identifiers.py  model_graph_info.py
src/distributed_inference/model_management/: model_optimize.py  model_profile.py  model_profile_agg.py  model_utils.py  onnx_tool_custom_nodes.py
test/contracts/: model_graph_extractor_contract.py  model_metadata_store_contract.py  model_version_artifact_store_contract.py  model_version_materializer_contract.py  sub_model_artifact_store_contract.py  sub_model_materializer_contract.py
test/unit/adapters/outbound/model_artifact/: test_local_model_version_artifact_store.py  test_local_model_version_materializer.py  test_local_sub_model_artifact_store.py  test_local_sub_model_materializer.py
test/unit/adapters/outbound/model_metadata_store/: test_in_memory_contract.py  test_in_memory_implementation.py
test/unit/adapters/outbound/model_profile/: test_onnx_graph_extractor.py
test/unit/model_management/: Test.py  Test_1.py  fake_test_agg_model_profile.py  fake_test_ideals_computation.py  fake_test_model_division.py  fake_test_simple_model_profile.py  models_info.py  test_agg_model_profile.py  test_ideals_computation.py  test_simple_model_profile.py
utils/: model_graph_utils.py
(+8 files in other folders)
