[project]
name = "distributed-inference"
version = "0.1.0"
requires-python = ">=3.14"

dependencies = [
  "numpy>=2.0",
  "pydantic>=2.8",
  "pydot>=4.0.1",
  "pyyaml>=6.0",
  "structlog>=24.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.9",
  "mypy>=1.14",
  "pre-commit>=4.0",
  "ipython>=8.0",
  "torch>=2.13",
  "torchvision>=0.28",
  "matplotlib>=3.8",
  "pydot>=1.4",
  "onnxconverter-common==1.16.0",
  "transformers==4.57.6",
  "optimum==2.1.0",
  "optimum-onnx==0.1.0",
  "ultralytics==8.4.104",
  "pillow==12.3.0",
  "safetensors==0.8.0",
]

runtime = [
  "onnxruntime>=1.27",
  "pyarrow>=18.0",
  "pyro5>=5.15",
  "prometheus-client>=0.21",
]

control = ["pyomo>=6.8", "kubernetes>=32.0", "pyro5>=5.15"]

measurement = [
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "prometheus-client>=0.21",
  "pandas>=2.2",
]

network-agent = ["pyroute2>=0.7", "prometheus-client>=0.21"]

model-management = [
  "onnx>=1.17",
  "onnxruntime>=1.27",
  "networkx>=3.4",
  "types-networkx>=3.4",
  "onnx-tool>=1.0.1",
  "onnxscript>=0.7",
  "onnxsim>=0.6.5",
  "onnxslim>=0.1.94",
  "pyro5>=5.15",
  "fastapi>=0.139",
]

gcp = ["google-cloud-storage>=3.0"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.mypy]
python_version = ">=3.14"

files = ["src", "services", "jobs", "tests"]

mypy_path = "src"

strict = true
warn_unused_configs = true
warn_unreachable = true
disallow_any_generics = true
warn_return_any = true

pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

exclude = ["^deployment/", "^experiments/", "^tools/", "^\\.venv/"]

[[tool.mypy.overrides]]
module = [
  "Pyro5.*",
  "onnxruntime.*",
  "onnx_tool.*",
  "networkx.*",
  "onnxsim.*",
  "onnxslim.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src", "."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = ["-ra", "--strict-markers"]

markers = [
  "unit: test isolati",
  "integration: test di integrazione",
  "contract: test comuni ai diversi backend",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["distributed_inference"]
